# local_adaptive_binarization

./: CMakeCache.txt  CMakeLists.txt  Makefile  binarizewolfjolion  binarizewolfjolion.cpp  binarizewolfjolion.cu  binarizewolfjolion_2d  binarizewolfjolion_sauvola  binarizewolfjolion_sauvola.cu  binarizewolfjolion_sauvola_2d.cu  cmake_install.cmake  main.cpp  timing.h
serial/: 800_800.jp2  CMakeCache.txt  Makefile  Makefile_orig  binarizewolfjolion  binarizewolfjolion.cpp  binarizewolfjolion_orig.cpp  cmake_install.cmake  timing.cpp  timing.h
