cmake_minimum_required(VERSION 2.8)
project(binarizewolfjolion)
SET(OpenCV_DIR "/afs/cs.cmu.edu/academic/class/15418-s19/public/projects/park-chen/local/share/OpenCV")
find_package( OpenCV REQUIRED PATHS /afs/cs.cmu.edu/academic/class/15418-s19/public/projects/park-chen/local/ NO_DEFAULT_PATH)
add_executable( binarizewolfjolion binarizewolfjolion.cpp timing.cpp)
target_link_libraries( binarizewolfjolion ${OpenCV_LIBS} )